Basic layout of reminder page

--- a/style.css
+++ b/style.css
@@ -1,133 +1,12 @@
-.navigation{
-
-  color:maroon;
-  display:flex;
-  justify-content:flex-end;
-  flex-flow:row wrap;
-  list-style: none;
-  margin: 0;
-  background-color: lightgray;
+/* Cards */
+body .row {
+  margin: 2rem 0;
 }
-.navigation a {
-  text-decoration: none;
-  display: block;
-  padding: 1em;
-  color: rgb(192, 27, 27);
-}
-
-.navigation a:hover {
-  background: #149a9e;
-}
-
-
-
-figure {
-  border: thin #c0c0c0 solid;
-  display: flex;
-  flex-flow: column;
-  padding: 5px;
-  max-width: 220px;
-  margin: auto;
-}
-
-img {
-  max-width: 220px;
-  max-height: 150px;
-}
-
-figcaption {
-  background-color: #222;
-  color: #fff;
-  font: italic smaller sans-serif;
-  padding: 3px;
+.card-title {
   text-align: center;
 }
-.container{
-  display:flex;
-  align-items: center;
- 
 
-  
-}
-.container-1{
-  background-color:lightgrey;
-  padding: 10px;
-  margin: 10px;
-  
-  
-}
-.container-2{
-  background-color: lightgray;
-  padding: 10px;
-  margin: 10px;
-  
-  
-  
-}
-.container-3{
-  background-color: lightgray;
-  padding: 10px;
-  margin: 10px;
-  
-  
-}
-.container-4{
-  background-color: lightgray;
-  padding: 10px;
-  margin: 10px;
-  
-}
-.container-5{
-  background-color: lightgray;
-  padding: 10px;
-  margin: 10px;
-  
-}
-.container-6{
-  background-color: lightgray;
-  padding: 10px;
-  margin: 10px;
-  
-}
-.container-7{
-  background-color: lightgray;
-  padding: 10px;
-  margin: 10px;
-  
-}
-.container-8{
-  background-color: lightgray;
-  padding: 10px;
-  margin: 10px;
-  
-}
-.container-9{
-  background-color: lightgray;
-  padding: 10px;
-  margin: 10px;
-  
-}
-.container-10{
-  background-color: lightgray;
-  padding: 10px;
-  margin: 10px;
-  
-}
-.container-11{
-  background-color: lightgray;
-  padding: 10px;
-  margin: 10px;
-  
-}
-.container-12{
-  background-color: lightgray;
-  padding: 10px;
-  margin: 10px;
-  
-}
-footer{
-  background-color: rgb(31, 105, 179);
-  padding: 10px;
-  margin: 10px;
-  
+/* Footer */
+#footer {
+  text-align: center;
 }
