--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-
 /* color-primary-lightest: #feefed; */
 /* color-primary-light: #F55C47; */
 /* color-primary-medium: #dd5340; */
@@ -141,6 +139,18 @@ Nav Styles
 
 .quiz-btn:hover {
   background-color: #7b2e24;
+}
+
+.burger {
+  display: none;
+  position: absolute;
+  top: 30%;
+  right: 50%;
+  color: #7b2e24;
+}
+
+.media-nav {
+  display: none;
 }
 
 /******************
@@ -679,7 +689,6 @@ article p {
 /******************
 About us Styles
 *******************/
-
 .about-us {
   position: relative;
   margin: 9.6rem 0 6.4rem;
@@ -707,12 +716,12 @@ About us Styles
 }
 
 .about-img-ctn {
-position: relative;
-justify-self: center;
-background-color: #feefed;
-border-radius: 70% 51% 30% 70% / 41% 65% 55% 79%;
-height: 30rem;
-width: 30rem;
+  position: relative;
+  justify-self: center;
+  background-color: #feefed;
+  border-radius: 70% 51% 30% 70% / 41% 65% 55% 79%;
+  height: 30rem;
+  width: 30rem;
 }
 
 .about-img {
@@ -760,4 +769,397 @@ svg {
   width: 30px;
 }
 
->>>>>>>feature/reminder
+/******************
+Media Queries
+*******************/
+@media (max-width: 62.5em) {
+  .text__h1 {
+    font-size: 3.2rem;
+  }
+
+  .img--toucan, .about-img {
+    height: 27rem;
+  }
+
+  .about-img {
+    top: -3rem;
+    right: -6rem;
+  }
+
+  .open-quiz {
+    width: 50rem;
+    padding: 1.8rem;
+  }
+
+  .quiz-choices {
+    grid-template-columns: 1fr;
+  }
+
+  .quiz-flex {
+    margin: 3.2rem;
+    text-align: center;
+  }
+
+  .quiz-title-ctn {
+    border-bottom: none;
+    margin: 0 auto;
+  }
+
+  .quiz-choice, .quiz-question {
+    width: 90%;
+  }
+
+  .quiz-question {
+    margin: 0 auto;
+  }
+
+  .quiz-question {
+    margin-bottom: 2.4rem;
+  }
+
+  .quiz-choice {
+    justify-self: center;
+  }
+
+  .icon-ctn {
+    top: 2rem;
+    right: 3rem;
+  }
+}
+
+@media (max-width: 53em) {
+  .header {
+    margin-bottom: 6.4rem;
+  }
+
+  .main-header {
+    padding: 25rem 0 9.6rem 0;
+  }
+
+  .grid {
+    justify-items: center;
+  }
+
+  .grid-2-columns {
+    grid-template-columns: 1fr;
+    grid-row-gap: 13rem;
+  }
+
+  .img-blob--1 {
+    top: -5rem;
+    left: -25rem;
+  }
+
+  .img-blobline--1 {
+    top: -6rem;
+    left: -26rem;
+  }
+
+  .img-blob--2 {
+    bottom: -20rem;
+    left: -25rem;
+  }
+
+  .img-blobline--2 {
+    bottom: -19rem;
+    left: -25rem;
+  }
+
+  .text__h1 {
+    font-size: 3.2rem;
+    width: 50rem;
+    text-align: center;
+  }
+
+  .text-blob--1 {
+    bottom: 0;
+    left: 10rem;
+    width: 25rem;
+    height: 18rem;
+  }
+
+  .text-blob--2 {
+    bottom: 15rem;
+    right: -13rem;
+  }
+
+  .text-blobline--2 {
+    bottom: 14rem;
+    right: -13rem;
+  }
+
+  .text-blob--3 {
+    bottom: 25rem;
+    left: 0;
+  }
+
+  .text-blobline--3 {
+    bottom: 24.5rem;
+    left: 0;
+  }
+
+  .quiz-img-ctn {
+    justify-self: center;
+  }
+
+  .section__quiz, .about-us {
+    padding: 4.8rem 0 2.4rem;
+  }
+
+  .grid {
+    grid-column-gap: 3.2rem;
+  }
+}
+
+@media (max-width: 47em) {
+  .main-header {
+    padding: 15rem 0 9.6rem 0;
+  }
+
+  .burger {
+    display: block;
+  }
+
+  .main-nav {
+    display: none;
+  }
+
+  .media-nav {
+    padding: 3rem;
+    display: block;
+  }
+
+  .ul-2 {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.2rem;
+  }
+
+  .ul-2 li {
+    display: inline-block;
+  }
+
+  .ul-2 a {
+    font-size: 1.8rem;
+    font-weight: 600;
+    color: #fff;
+    text-decoration: none;
+  }
+
+  .ul-2 a:hover {
+    border-bottom: 2px solid #fff;
+  }
+
+  .nav-blob {
+    display: none;
+  }
+
+  .nav-blobline {
+    display: none;
+  }
+
+  .text-blob--2 {
+    bottom: 30rem;
+    right: -3rem;
+    width: 6rem;
+    height: 6rem;
+  }
+
+  .text-blobline--2 {
+    bottom: 29rem;
+    right: -3rem;
+    width: 6rem;
+    height: 6rem;
+  }
+
+  .grid-4-columns {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .team {
+    margin-bottom: 2rem;
+  }
+}
+
+@media (max-width: 35em) {
+  .container {
+    padding: 0rem;
+  }
+
+  .grid {
+    grid-column-gap: 0;
+  }
+
+  .grid-2-columns {
+    grid-row-gap: 10rem;
+  }
+
+  .img-ctn {
+    width: 29rem;
+  }
+
+  .text-blob--2 {
+    bottom: 59rem;
+    right: 10rem;
+  }
+
+  .text-blobline--2 {
+    bottom: 60rem;
+    right: 10rem;
+  }
+
+  .quiz-text__h2 {
+    font-size: 2.4rem;
+    margin-bottom: 2.4rem;
+  }
+
+  .quiz-text__p {
+    font-size: 1.6rem;
+    margin-bottom: 2.4rem;
+  }
+
+  .quiz-img-ctn {
+    width: 29rem;
+    height: 31rem;
+  }
+
+  .quiz-img {
+    top: -2rem;
+    height: 30rem;
+  }
+
+  .quiz-img--blob {
+    right: -1rem;
+    width: 8rem;
+    height: 5rem;
+  }
+
+  .quiz-img--blobline {
+    top: 1rem;
+    width: 9rem;
+    height: 5rem;
+  }
+
+  .quiz-text-ctn {
+    margin: 2rem;
+  }
+
+  .open-quiz {
+    width: 40rem;
+    padding: 1.8rem;
+  }
+
+  .quiz-choices {
+    grid-template-columns: 1fr;
+  }
+
+  .quiz-flex {
+    margin: 1.2rem;
+    text-align: center;
+  }
+
+  .quiz-choice, .quiz-question {
+    width: 90%;
+  }
+}
+
+@media (max-width: 30em) {
+
+  .img-blob--1, .img-blobline--1,
+  .img-blob--2, .img-blobline--2,
+  .text-blob--2, .text-blobline--2,
+  .text-blob--3, .text-blobline--3 {
+    display: none;
+  }
+
+  .main-header {
+    padding: 5rem 0 3.6rem 0;
+  }
+
+  .img-ctn {
+    width: 19rem;
+  }
+
+  .img--toucan {
+    height: 17rem;
+  }
+
+  .text-blob--1 {
+    display: none;
+  }
+
+  .text__h1 {
+    font-size: 2.4rem;
+    width: 30rem;
+  }
+
+  .quiz-text-ctn {
+    padding: 2rem;
+  }
+
+  .quiz-btn {
+    font-size: 1.6rem;
+    padding: 1rem 1rem;
+  }
+
+  .grid-4-columns {
+    grid-template-columns: 1fr;
+  }
+
+  .ul-2 a {
+    font-size: 1.2rem;
+  }
+
+  .quiz-img-ctn,
+  .about-img-ctn {
+    width: 19rem;
+    height: 21rem;
+  }
+
+  .quiz-img,
+  .about-img {
+    height: 20rem;
+  }
+
+  .quiz-img--blob {
+    width: 5rem;
+    height: 3rem;
+  }
+
+  .quiz-img--blobline {
+    width: 5rem;
+    height: 3rem;
+  }
+
+  .about-us__p {
+    font-size: 1.6rem;
+  }
+
+  .about-us__h2 {
+    font-size: 3rem;
+  }
+
+  .grid-2-columns {
+    grid-row-gap: 8rem;
+  }
+
+  .open-quiz {
+    width: 30rem;
+    padding: 1rem;
+  }
+
+  .quiz-title {
+    font-size: 2.4rem;
+  }
+
+  .quiz-question {
+    font-size: 1.8rem;
+  }
+
+  .quiz-choice {
+    font-size: 1.6rem;
+    padding: 1.6rem;
+  }
+}
